# py-pdf-term

./: .editorconfig  .flake8  .gitignore  .mecabrc  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pull-request.yml  push.yml  reusable-ghpages.yml  reusable-test.yml  run-test.yml
docs/: api.rst  architecture.puml  conf.py  index.rst
docs/plantuml/: architecture.puml
docs/scripts/: postprocess.py
docs/static/: custom.css
pdf_slides_term/: candidates.py  consts.py  morphemes.py  pdftoxml.py  settings.py  tagger.py  terms.py  tokenizer.py
pdf_slides_term/analysis/: __init__.py  charfont.py  concatenation.py  cooccurrence.py  occurrence.py  runner.py
pdf_slides_term/candidates/: __init__.py  data.py  extractor.py  filter.py
pdf_slides_term/candidates/filters/: __init__.py  candidate.py
pdf_slides_term/mecab/: __init__.py  classifier.py  filter.py  morphemes.py  tagger.py
pdf_slides_term/methods/: __init__.py  base.py  data.py  flr.py  flrh.py  hits.py  lfidf.py  mcvalue.py  mdp.py  tfidf.py
pdf_slides_term/methods/analyzers/: charfont.py  concatenation.py  occurrence.py
pdf_slides_term/methods/collectors/: base.py  flr.py  flrh.py  hits.py  lfidf.py  mcvalue.py  mdp.py  tfidf.py
pdf_slides_term/methods/rankers/: base.py  flr.py  flrh.py  hits.py  lfidf.py  mcvalue.py  mdp.py  tfidf.py
pdf_slides_term/methods/rankingdata/: __init__.py  flr.py  flrh.py  hits.py  lfidf.py  mcvalue.py  mdp.py  tfidf.py
pdf_slides_term/pdftoxml/: converter.py  textful.py
pdf_slides_term/share/: consts.py  data.py  utils.py
pdf_slides_term/techterms/: __init__.py  converter.py  data.py  extractor.py  selector.py
py_pdf_term/: __init__.py  configs.py  mappers.py
py_pdf_term/_common/: data.py
py_pdf_term/pdftoxml/: binopener.py
py_pdf_term/tokenizer/: __init__.py  langs.py
py_slides_term/: __init__.py
py_slides_term/_common/: data.py
py_slides_term/analysis/: __init__.py  charfont.py  concatenation.py  cooccurrence.py  occurrence.py  runner.py
py_slides_term/candidates/: __init__.py  data.py  extractor.py  utils.py
py_slides_term/endtoend/: __init__.py  cache.py  configs.py  extractor.py
py_slides_term/mecab/: morphemes.py  tagger.py
py_slides_term/methods/: __init__.py  base.py  data.py  flr.py  flrh.py  hits.py  lfidf.py  mcvalue.py  mdp.py  tfidf.py
py_slides_term/morphemes/: __init__.py  classifier.py  data.py  tokenizer.py
py_slides_term/pdftoxml/: __init__.py  converter.py  data.py  textful.py  utils.py
py_slides_term/share/: consts.py  data.py  utils.py
py_slides_term/stylings/: data.py  scorer.py
py_slides_term/techterms/: converter.py  data.py  extractor.py  selector.py  utils.py
py_slides_term/tokenizer/: __init__.py  data.py  langs.py  tokenizer.py
scripts/: main_candidates.py  main_endtoend.py  main_methods.py  main_pdftoxml.py  main_stylings.py  main_tagger.py  main_techterms.py  main_tokenizer.py  settings.py  utils.py
test-fixtures/: py-pdf-term-candidate.json  py-pdf-term-method.json  py-pdf-term-styling.json  py-pdf-term.xml  wikipedia-pdf-candidate.json  wikipedia-pdf.xml
tests/: consts.py  fixtures.py
tests/analysis/: test_container.py  test_lrconcat.py  test_termocc.py
tests/candidates/: test_augmenter.py  test_extractor.py  test_filter.py  test_spacing.py  test_splitter.py
tests/endtoend/: test_extractor.py
tests/methods/: test_flr.py  test_flrh.py  test_hits.py  test_mcvalue.py  test_mdp.py  test_tfidf.py
tests/pdftoxml/: test_converter.py
tests/stylings/: test_scorer.py
tests/techterms/: test_extractor.py
(+386 files in other folders)
