[tool.poetry]
name = "py-pdf-term"
version = "1.1.0"
description = "A fully-configurable terminology extraction module written in Python"
authors = ["Yuya Suwa"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/kumachan-mis/py-pdf-term"
repository = "https://github.com/kumachan-mis/py-pdf-term"
keywords = ["terminology extraction", "technical term", "pdf"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
"pdfminer.six" = "^20231228"
spacy = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"
flake8-quotes = "^3.3.2"
ghp-import = "^2.1.0"
isort = "^5.13.2"
pep8-naming = "^0.13.3"
pre-commit = "^3.6.0"
pytest-mock = "^3.12.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
Sphinx = "^7.2.6"

[tool.poetry.group.dev.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"

[tool.poetry.group.dev.dependencies.ja_core_news_sm]
url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0.tar.gz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
